--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <img class="notifications-icon" src="images/notifications.svg">
           <div class="notifications-count">3</div>
         </div>
-        <img class="current-user-picture" src="images/my-channel.jpg">
+        <img class="current-user-picture" src="images/my-channel.JPG">
       </div>
     </header>
 
